add city tag and some post edits

--- a/_posts/2017-06-08-tehlug.md
+++ b/_posts/2017-06-08-tehlug.md
@@ -11,6 +11,7 @@ telegram: "tehlug"
 site: "https://tehlug.org"
 evand: "https://evand.com/organizations/tehlug"
 tags:
+- تهران
 - لاگ
 - لینوکس
 image: '/assets/img/tehlug.png'
