--- a/_posts/2017-08-07-kshlug.md
+++ b/_posts/2017-08-07-kshlug.md
@@ -13,6 +13,7 @@ location: "https://www.openstreetmap.org/export/embed.html?bbox=47.0860585570335
 description: لاگ کرمانشاه یک گروه مستقل متشکل از علاقه مندان به کامپیوتر،گنو/لینوکس و نرم افزارهای آزاد می باشد. بیشتر افراد این گروه ساکن کرمانشاه هستند
 category: 'لاگ'
 tags:
+- کرمانشاه
 - لاگ
 - لینوکس
 twitter_text: لاگ کرمانشاه یک گروه مستقل متشکل از علاقه مندان به کامپیوتر،گنو/لینوکس و نرم افزارهای آزاد می باشد. بیشتر افراد این گروه ساکن کرمانشاه هستند
