--- a/_posts/2017-08-14-mzlug.md
+++ b/_posts/2017-08-14-mzlug.md
@@ -8,6 +8,7 @@ site: "http://mzlug.ir"
 description: گروه کاربران گنو/لینوکس مازندران (مازلاگ) گروهی مستقل و متشکل از علاقه‌مندان به دنیای آزاد و آزادی نرم‌افزار است که به صورت مدون و با هماهنگی‌های قبلی گرد هم می‌آیند.
 category: 'لاگ'
 tags:
+- مازندران
 - لاگ
 - لینوکس
 twitter_text: گروه کاربران گنو/لینوکس مازندران (مازلاگ) گروهی مستقل و متشکل از علاقه‌مندان به دنیای آزاد و آزادی نرم‌افزار است که به صورت مدون و با هماهنگی‌های قبلی گرد هم می‌آیند.
