--- a/_posts/2017-08-19-ilamlug.md
+++ b/_posts/2017-08-19-ilamlug.md
@@ -11,6 +11,7 @@ telegram: "ilamlug"
 description: گروه کاربران گنو/لینوکس ایلام یا «ایلام لاگ» گروهی مستقل، مردم‌نهاد، ناسودبر و عمومی از کاربران رایانه علاقه‌مند به گنو/لینوکس ساکن ایلام می‌باشد
 category: 'لاگ'
 tags:
+- ایلام
 - لاگ
 - لینوکس
 twitter_text: گروه کاربران گنو/لینوکس ایلام یا «ایلام لاگ» گروهی مستقل، مردم‌نهاد، ناسودبر و عمومی از کاربران رایانه علاقه‌مند به گنو/لینوکس ساکن ایلام می‌باشد
