--- a/_posts/2018-09-12-ahwlug.md
+++ b/_posts/2018-09-12-ahwlug.md
@@ -9,6 +9,7 @@ telegram: "joinchat/A5KDbj8OEeNOJStu_nUO3Q"
 site: "http://www.ahwlug.ir/"
 evand: "https://evand.com/organizations/ahwazlug"
 tags:
+- اهواز
 - لاگ
 - لینوکس
 image: '/assets/img/ahwlug.jpg'
