--- a/_posts/2018-09-12-araklug.md
+++ b/_posts/2018-09-12-araklug.md
@@ -12,6 +12,7 @@ evand: "https://evand.com/organizations/araklug"
 location: "https://www.openstreetmap.org/export/embed.html?bbox=49.69713538885117%2C34.07806063481119%2C49.69918996095658%2C34.07940247453109&amp;layer=mapnik"
 site: "http://araklug.ir/"
 tags:
+- اراک
 - لاگ
 - لینوکس
 image: '/assets/img/arlug.png'
