--- a/_posts/2018-09-12-karajlug.md
+++ b/_posts/2018-09-12-karajlug.md
@@ -9,6 +9,7 @@ github_username: "karajlug"
 telegram: "karajlug"
 site: "http://www.karajlug.org/"
 tags:
+- کرج
 - لاگ
 - لینوکس
 image: '/assets/img/karajlug.png'
