--- a/_posts/2018-09-12-sanlug.md
+++ b/_posts/2018-09-12-sanlug.md
@@ -8,6 +8,7 @@ github_username: "sanlug"
 telegram: "joinchat/IV0CyBRuKlUMdlmn5214xg"
 site: "https://sanlug.github.io/"
 tags:
+- سنندج
 - لاگ
 - لینوکس
 image: '/assets/img/sanlug.png'
