--- a/_posts/2018-09-14-arlug.md
+++ b/_posts/2018-09-14-arlug.md
@@ -6,6 +6,7 @@ category: 'لاگ'
 active: "yes"
 telegram: "joinchat/Ca8huBHQoL_A_56j9Lfmwg"
 tags:
+- اردبیل
 - lug
 - linux
 image: "/assets/img/arlug.jpg"
