--- a/_posts/2018-09-15-slug.md
+++ b/_posts/2018-09-15-slug.md
@@ -6,6 +6,7 @@ category: 'لاگ'
 active: "yes"
 site: "http://slug.ir"
 tags:
+- ساوه
 - lug
 - linux
 twitter_text: لاگ ساوه اجتماع آزادی از دوست‌داران گنو/لینوکس است که بیشتر در شهر ساوه زندگی می‌کنند.
