--- a/_posts/2018-10-05-gorgan.md
+++ b/_posts/2018-10-05-gorgan.md
@@ -6,6 +6,7 @@ category: 'لاگ'
 active: "yes"
 telegram: "Gorganlug"
 tags:
+- گرگان
 - lug
 - linux
 twitter_text: لاگ گرگان اجتماع آزادی از دوست‌داران گنو/لینوکس است که بیشتر در شهر گرگان زندگی می‌کنند.
