--- a/_posts/2018-09-12-gullug.md
+++ b/_posts/2018-09-12-gullug.md
@@ -9,6 +9,7 @@ site: "http://www.gullug.org/"
 instagram: "gulluginsta"
 evand‌: "https://evand.com/organizations/%DA%AF%D8%B1%D9%88%D9%87-%DA%A9%D8%A7%D8%B1%D8%A8%D8%B1%D8%A7%D9%86-%DA%AF%D9%86%D9%88-%D9%84%DB%8C%D9%86%D9%88%DA%A9%D8%B3-%DA%AF%DB%8C%D9%84%D8%A7%D9%86-385789"
 tags:
+- گیلان
 - لاگ
 - لینوکس
 image: '/assets/img/gilanlug.jpg'
